--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/farmerAdmin
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/farmerAdmin?createDatabaseIfNotExist=true
+
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
